# pdf-toolkit

./: .gitattributes  .gitignore  CLAUDE.md  FastFileViewer.bat  FastFileViewer.spec  FastFileViewer.vbs  FastFileViewer_register.bat  FastFileViewer_unregister.bat  README.md  code_analysis_rules.json  install.bat  pdf-delete-page.bat  pdf-delete-pages.bat  pdf-extract-page.bat  pdf-insert-page.bat  pdf-merge-folder.bat  pdf-move-page.bat  pdf-rotate-page.bat  pdf-swap-pages.bat  pdft-gui.spec  pdft.bat  pdft_gui.bat  pdft_gui.vbs  pdft_gui_register.bat  pdft_gui_unregister.bat  pyproject.toml  update.bat
app/: app_logger.py  logging_setup.py
app/cli/: _common.py  console.py  delete_page.py  delete_pages.py  (+9 more)
demo/: __init__.py  bootstrap.py  player.py  scripts.py  steps.py
docs/: APP_ICON.md  COMMAND_PALETTE.md  CONFIGURE_SHORTCUTS.md  CREATE_NEW_RELEASE.md  CUSTOM_UI.md  DEFAULT_PDF_VIEWER.md  DEMO_RECORDING.md  FILE_ASSOCIATIONS.md  FILE_BROWSER.md  FILE_FORMATS.md  KEYBOARD_SHORTCUTS.md  OPEN_LINK.md  REMEMBERED_SETTINGS.md  SELECT_MODE.md  STATUS_BAR.md  TEXT_EDITING.md  THUMBNAIL_VIEW.md  TOOGLE_FULLSCREEN.md  WIDGETS.md  ZOOM_PDF_QUALITY.md
installer/: installer.nsi
tests/: conftest.py
tmp/: commit_msg.tmp
tools/: build_and_create_installer_for_testing.bat  build_decrement.bat  build_exe.bat  build_get.bat  build_increment.bat  build_release.bat  install_global.bat  png_to_ico.bat  png_to_ico.py  presign_exe.py  publish_release.bat  publish_settings_example.ini  run_integration_tests.bat  run_tests.bat  translator_release_notes.bat  version_get.bat
(+554 files in other folders)
