[project]
name = "pdf-toolkit"
version = "0.1.0"
description = "Small CLI toolkit for PDF page operations (swap, delete) with timestamped backups."
requires-python = ">=3.11,<3.13"
dependencies = [
    "pypdf>=5.0",
]

[project.scripts]
pdf-swap = "app.cli.swap:main"
pdf-delete-page = "app.cli.delete_page:main"
pdf-install-global = "app.cli.install_global:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["app", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
